Adding Bonuses to ResNet

--- a/days/w1d1/resnet_template.ipynb
+++ b/days/w1d1/resnet_template.ipynb
@@ -21,7 +21,9 @@
    "source": [
     "The goal of this project is to familiarize ourselves with the fundamentals of deep learning engineering for computer vision and image recognition. We will reimplement from scratch a member of the ResNet family of vision models and apply our model to classify images into different categories.\n",
     "\n",
-    "We will start by loading an existing ResNet implementation (pretrained on ImageNet), and seeing what sorts of classificaton the model can output. Then, we will discuss and implement the basic blocks of computer vision architectures. After that, we will move to ResNet, and implement the architecture using our basic blocks. We will then use our model for classifying images."
+    "We will start by loading an existing ResNet implementation (pretrained on ImageNet), and seeing what sorts of classificaton the model can output. Then, we will discuss and implement the basic blocks of computer vision architectures. After that, we will move to ResNet, and implement the architecture using our basic blocks. We will then use our model for classifying images.\n",
+    "\n",
+    "Bonus: only if you finish the other exercices!"
    ]
   },
   {
@@ -829,6 +831,8 @@
    },
    "outputs": [],
    "source": [
+    "# We will only implement conv1d\n",
+    "# conv2d is a bonus, we will use the torch implementation.\n",
     "from torch.nn.functional import conv1d as torch_conv1d\n",
     "from torch.nn.functional import conv2d as torch_conv2d"
    ]
@@ -867,7 +871,7 @@
     "id": "IGMHqRfbgj00"
    },
    "source": [
-    "Replace `input` to pass the test."
+    "(Bonus) Replace `input` to pass the test."
    ]
   },
   {
@@ -910,6 +914,7 @@
    },
    "outputs": [],
    "source": [
+    "# Tip: Think about the meaning of each dimension here\n",
     "input = torch.tensor([[[1, 2, 3],\n",
     "                       [4, 5, 6]],\n",
     "                      [[1, 1, 1],\n",
@@ -1008,7 +1013,7 @@
     "id": "SbwT_ta69uYh"
    },
    "source": [
-    "Implement 2d convolutions (with minimal arguments). Use `torch.as_strided` and `torch.einsum`."
+    "(Bonus) Implement 2d convolutions (with minimal arguments). Use `torch.as_strided` and `torch.einsum`."
    ]
   },
   {
@@ -1111,29 +1116,34 @@
     "# padding: int\n",
     "def conv1d(x, weights, stride=1, padding=0):\n",
     "    pass\n",
-    "\n",
-    "# x : (batchsize, in_channels, height, width), \n",
-    "# weights : (out_channels, in_channels, kernel_height, kernel_width), \n",
-    "# stride: int or tuple(int, int)\n",
-    "# padding: int or tuple(int, int)\n",
-    "def conv2d(x, weights, stride=1, padding=0):\n",
-    "    pass"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "wFFXTKXChcHN",
-    "outputId": "c8b4d70e-b3a7-41c9-dfa0-c4b18efc6c0b"
-   },
-   "outputs": [],
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test 0 passed!\n",
+      "Test 1 passed!\n",
+      "Test 2 passed!\n",
+      "Test 3 passed!\n",
+      "Test 4 passed!\n",
+      "Test 5 passed!\n",
+      "Test 6 passed!\n",
+      "Test 7 passed!\n",
+      "Test 8 passed!\n",
+      "Test 9 passed!\n",
+      "All tests passed!\n"
+     ]
+    }
+   ],
    "source": [
     "#@title conv2d fuzz tests { form-width:\"200px\" }\n",
-    "\n",
     "\n",
     "def test_conv1d(my_conv, n_tests = 10):\n",
     "    import numpy as np\n",
@@ -1172,8 +1182,42 @@
     "        print(f\"Test {i} passed!\")\n",
     "    print('All tests passed!')\n",
     "\n",
-    "test_conv1d(conv1d)\n",
-    "\n",
+    "test_conv1d(conv1d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(Bonus) : Do the Same for conv2d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# x : (batchsize, in_channels, height, width), \n",
+    "# weights : (out_channels, in_channels, kernel_height, kernel_width), \n",
+    "# stride: int or tuple(int, int)\n",
+    "# padding: int or tuple(int, int)\n",
+    "def conv2d(x, weights, stride=1, padding=0):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "wFFXTKXChcHN",
+    "outputId": "c8b4d70e-b3a7-41c9-dfa0-c4b18efc6c0b"
+   },
+   "outputs": [],
+   "source": [
     "def test_conv2d(my_conv, n_tests = 10):\n",
     "    import numpy as np\n",
     "    for i in range(n_tests):\n",
@@ -1369,6 +1413,9 @@
    "source": [
     "from torch.nn import Module, Parameter\n",
     "\n",
+    "# Not Bonus:\n",
+    "# use torch conv2d for the core operation function.\n",
+    "# But you still have to define and initialize the parameters in the __init__\n",
     "class Conv2d(Module):\n",
     "    def __init__(\n",
     "        self,\n",
@@ -1381,6 +1428,7 @@
     "        pass\n",
     "\n",
     "    def forward(self, x):\n",
+    "\n",
     "        pass\n",
     "        \n",
     "\n",
@@ -1436,7 +1484,12 @@
     "id": "_Qp0LwMbJD8J"
    },
    "source": [
-    "Implement a BatchNorm2d module."
+    "Implement a BatchNorm2d module.\n",
+    "\n",
+    "Tips:\n",
+    "- Reimplement the formula in the torch documentation\n",
+    "- Warning: Momentum in pytorch doc is the inverse of the usual momentum\n",
+    "- Some parameters should not be considered in the autograd graph, google torch register_buffer"
    ]
   },
   {
@@ -1571,6 +1624,8 @@
    },
    "outputs": [],
    "source": [
+    "# You can import Linear, Relu, etc from torch.nn\n",
+    "\n",
     "class ResNet34(Module):\n",
     "    def __init__(self, output_size=1000):\n",
     "        pass\n",
@@ -1647,7 +1702,30 @@
     "                                torchvision.transforms.PILToTensor(),\n",
     "                                torchvision.transforms.ConvertImageDtype(torch.float)]),\n",
     "                            download=True, \n",
-    "                            train=True)"
+    "                            train=True)\n",
+    "\n",
+    "# What is the benefit of using a Dataloader?\n",
+    "trainloader = torch.utils.data.DataLoader(cifar_train, batch_size=100,\n",
+    "                                          shuffle=True)\n",
+    "\n",
+    "model = ResNet34(n_outs=10).to(device).train()\n",
+    "optimizer = optim.Adam(model.parameters())\n",
+    "\n",
+    "# Why do we use the CrossEntropyLoss?\n",
+    "# What is the difference with CrossEntropyLossWithLogits?\n",
+    "loss_fn = torch.nn.CrossEntropyLoss()\n",
+    "\n",
+    "epochs = 4\n",
+    "for _ in range(epochs):\n",
+    "    for i, (x, y) in enumerate(tqdm(trainloader)):\n",
+    "        x, y = x.to(device), y.to(device)\n",
+    "        optimizer.zero_grad()\n",
+    "        y_hat = model(x)\n",
+    "        loss = loss_fn(y_hat, y)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        if i % 500 == 0:\n",
+    "            print(f\"Batch {i}, loss is {loss}\")"
    ]
   },
   {
