transformer exercice ready

--- a/days/w1d3/transformers.ipynb
+++ b/days/w1d3/transformers.ipynb
@@ -6,17 +6,22 @@
         "id": "tzoTIn3bFHJM"
       },
       "source": [
-        "Lectures preliminaires:\n",
+        "Preliminary readings:\n",
         "- High level explication:  https://huggingface.co/course/chapter1/1?fw=pt\n",
         "- Transformer tuto: https://jalammar.github.io/illustrated-transformer/ \n",
         "- Details: Attention is all you need, https://arxiv.org/abs/1706.03762, section Architecture\n",
         "\n",
         "\n",
         "Questions:\n",
-        "- What is the original purpose of transform architecture?\n",
+        "- What is the original purpose of the transformer architecture?\n",
         "- What are its current uses?\n",
         "- Informally, what is the purpose of an encoder? What is the purpose of a decoder?\n",
-        "- How does the complexity of the transformer vary with the length of the sequences?"
+        "- How does the complexity of the transformer vary with the length of the sequences?\n",
+        "\n",
+        "Instructions: \n",
+        "- Hide the forward method, write a forward2 method using the properties defined at initialization. \n",
+        "- Once forward2 is coded, check your code by opening forward again, compare.\n",
+        "- test forward2 by renoming it to forward and launch the full notebook to see if your dimensions are compatible."
       ]
     },
     {
@@ -418,11 +423,13 @@
         "        self.device = device\n",
         "\n",
         "    def make_src_mask(self, src):\n",
+        "        # What is the purpose of the src mask?\n",
         "        src_mask = (src != self.src_pad_idx).unsqueeze(1).unsqueeze(2)\n",
         "        # (N, 1, 1, src_len)\n",
         "        return src_mask.to(self.device)\n",
         "\n",
         "    def make_trg_mask(self, trg):\n",
+        "        # Why do we use a lower triangular matrix?\n",
         "        N, trg_len = trg.shape\n",
         "        trg_mask = torch.tril(torch.ones((trg_len, trg_len))).expand(\n",
         "            N, 1, trg_len, trg_len\n",
@@ -483,6 +490,8 @@
         "model = Transformer(src_vocab_size, trg_vocab_size, src_pad_idx, trg_pad_idx, device=device).to(\n",
         "    device\n",
         ")\n",
+        "\n",
+        "# Why :-1 ?\n",
         "out = model(x, trg[:, :-1])\n",
         "print(out.shape)"
       ]
@@ -493,6 +502,20 @@
         "id": "E1xwRrP_I_6m"
       },
       "source": [
+        "Questions:\n",
+        "- How does the transfoer architecture enable parallel training?\n",
+        "- Why is the inference much slower than training in a sense?\n",
+        "- What is teacher forcing?\n",
+        "- Why bias=False in the self attention layer?\n",
+        "- Why do we add the embedding instead of concatenating them?\n",
+        "- What would happen if you train the attention architecture with sequence len of 512, and then try to use it with sequences of 1000 tokens?\n",
+        "- What are the differences between queries and keys?\n",
+        "\n",
+        "Bonus\n",
+        "- Hide the init in the SelfAttention class. and write and __init__2\n",
+        "- Generate a dataset of tokens. Train a transformer which reverse the order of the tokens.\n",
+        "\n",
+        "\n",
         "inspired from : https://github.com/aladdinpersson/Machine-Learning-Collection/blob/master/ML/Pytorch/more_advanced/transformer_from_scratch/transformer_from_scratch.py"
       ]
     },
