--- a/days/w1d2/feature_vizu_solution.ipynb
+++ b/days/w1d2/feature_vizu_solution.ipynb
@@ -452,7 +452,10 @@
     "\n",
     "Read the following code, understand, hide and rewrite.\n",
     "\n",
-    "You will need to understand the notion of hook: https://pytorch.org/tutorials/beginner/former_torchies/nnft_tutorial.html#forward-and-backward-function-hooks"
+    "You will need to understand the notion of hook: https://pytorch.org/tutorials/beginner/former_torchies/nnft_tutorial.html#forward-and-backward-function-hooks\n",
+    "\n",
+    "To see some uses of hooks:\n",
+    "https://medium.com/the-dl/how-to-use-pytorch-hooks-5041d777f904#:~:text=PyTorch%20hooks%20are%20registered%20for,are%20used%20for%20debugging%20purposes."
    ]
   },
   {
