--- a/days/w1d1/pytorch_tuto.ipynb
+++ b/days/w1d1/pytorch_tuto.ipynb
@@ -68,7 +68,8 @@
     "d = np.random.randn()\n",
     "\n",
     "learning_rate = 1e-6\n",
-    "for t in range(2000):\n",
+    "epochs = 2000\n",
+    "for t in range(epochs):\n",
     "    # Forward pass: compute predicted y\n",
     "    # y = a + b x + c x^2 + d x^3\n",
     "    ...\n",
@@ -157,7 +158,9 @@
     }
    ],
    "source": [
-    "# -*- coding: utf-8 -*-\n",
+    "# Tip: In this cell, the code should look like almost exactly like in the previous cell in numpy.\n",
+    "# We only want to use the low-levels functionalities of PyTorch.\n",
+    "\n",
     "import torch\n",
     "import math\n",
     "\n",
@@ -181,7 +184,7 @@
     "d = torch.randn((), device=device, dtype=dtype, requires_grad=True)\n",
     "\n",
     "learning_rate = 1e-6\n",
-    "for t in range(2000):\n",
+    "for t in range(epochs):\n",
     "    # Forward pass: compute predicted y\n",
     "    ...\n",
     "\n",
@@ -229,7 +232,7 @@
     }
    ],
    "source": [
-    "# Here You must use AUTOGRAD\n",
+    "# Here You must use AUTOGRAD, ie, no need to calculate by hand the gradient.\n",
     "import torch\n",
     "import math\n",
     "\n",
@@ -253,7 +256,7 @@
     "d = torch.randn((), device=device, dtype=dtype, requires_grad=True)\n",
     "\n",
     "learning_rate = 1e-6\n",
-    "for t in range(2000):\n",
+    "for t in range(epochs):\n",
     "    # Forward pass: compute predicted y using operations on Tensors.\n",
     "    ...\n",
     "\n",
@@ -368,7 +371,7 @@
     "loss_fn = torch.nn.MSELoss(reduction='sum')\n",
     "\n",
     "learning_rate = 1e-6\n",
-    "for t in range(2000):\n",
+    "for t in range(epochs):\n",
     "\n",
     "    # Forward pass: compute predicted y by passing x to the model. Module objects\n",
     "    # override the __call__ operator so you can call them like functions. When\n",
