Adding summary: torch to numpy

--- a/days/w1d1/pytorch_tuto.ipynb
+++ b/days/w1d1/pytorch_tuto.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# LEARNING PYTORCH WITH EXAMPLES\n",
+    "# Approximate the sine function with a polynomial of degree 3\n",
+    "\n",
+    "In this notebook, we will be gradually moving up in the abstraction ladder:\n",
+    "- 1. Bare Numpy (You need to compute the gradient by hand)\n",
+    "- 2. Bare Pytorch (You still need to compute the gradient by hand)\n",
+    "- 3. Autograd (Here you do not need to compute the gradient by hand anymore)\n",
+    "- 4. torch.nn (Using the nn Abstraction in pytorch)\n",
+    "- 5. Optimizer Abstraction (Finally, we don't even need to iterate on the parameters to update them)\n",
+    "\n",
+    "\n",
     "## Tensors\n",
     "### Warm-up: numpy\n",
     "Before introducing PyTorch, we will first implement the network using numpy.\n",
@@ -53,7 +62,6 @@
     }
    ],
    "source": [
-    "# Exercice 1: Approximer la fonction sinus à l'aide d'un polynome de degres 3 avec la librairie numpy\n",
     "import numpy as np\n",
     "import math\n",
     "\n",
