add colab badge

--- a/days/w1d2/introduction_adverserial/introduction.ipynb
+++ b/days/w1d2/introduction_adverserial/introduction.ipynb
@@ -1,12 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/EffiScienceResearch/ML4G/blob/main/days/w1d2/introduction_adverserial/introduction.ipynb)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "### PREAMBLE\n",
+    "\n",
     "# Chapter 1 - Introduction to adversarial robustness\n",
     "# noise.jpg\n",
     "\n",
