Add tips in  resnet

--- a/days/w1d1/resnet_template.ipynb
+++ b/days/w1d1/resnet_template.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "id": "Q6XtdJ9rN791"
    },
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -627,7 +627,58 @@
     "id": "GqjIfJKRQJJN",
     "outputId": "e08bbc10-8daf-450b-d746-9118a2038dcd"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 failed\n",
+      "Output:\n",
+      "tensor([0])\n",
+      "Expected:\n",
+      "tensor([0, 1, 2, 3])\n",
+      "1 failed\n",
+      "Output:\n",
+      "tensor([0])\n",
+      "Expected:\n",
+      "tensor([[0, 1, 2],\n",
+      "        [5, 6, 7]])\n",
+      "2 failed\n",
+      "Output:\n",
+      "tensor([0])\n",
+      "Expected:\n",
+      "tensor([[ 0,  0,  0],\n",
+      "        [11, 11, 11]])\n",
+      "3 failed\n",
+      "Output:\n",
+      "tensor([0])\n",
+      "Expected:\n",
+      "tensor([ 0,  6, 12, 18])\n",
+      "4 failed\n",
+      "Output:\n",
+      "tensor([0])\n",
+      "Expected:\n",
+      "tensor([[[ 0,  1,  2],\n",
+      "         [ 9, 10, 11]]])\n",
+      "5 failed\n",
+      "Output:\n",
+      "tensor([0])\n",
+      "Expected:\n",
+      "tensor([[[[ 0,  1],\n",
+      "          [ 2,  3]],\n",
+      "\n",
+      "         [[ 4,  5],\n",
+      "          [ 6,  7]]],\n",
+      "\n",
+      "\n",
+      "        [[[12, 13],\n",
+      "          [14, 15]],\n",
+      "\n",
+      "         [[16, 17],\n",
+      "          [18, 19]]]])\n"
+     ]
+    }
+   ],
    "source": [
     "def is_equal_test(*, output, expected, test_name='Test'):\n",
     "    successful = torch.allclose(expected.to(float), output.to(float))\n",
@@ -658,7 +709,7 @@
     "id": "fvP9ED8t7Gnh"
    },
    "source": [
-    "Implement a function that receives a square matrix (as a 2d tensor) and returns its [trace](https://en.wikipedia.org/wiki/Trace_(linear_algebra)) using `torch.as_strided` and `torch.sum`\n",
+    "Implement a function that receives a square matrix (as a 2d tensor) and returns its [trace](https://en.wikipedia.org/wiki/Trace_(linear_algebra)) using `torch.as_strided` and `torch.sum`.\n",
     "\n"
    ]
   },
@@ -671,7 +722,7 @@
    "outputs": [],
    "source": [
     "def strided_trace(a):\n",
-    "    pass"
+    "    ..."
    ]
   },
   {
@@ -704,19 +755,31 @@
     "id": "KsyEVo_Z87Uv"
    },
    "source": [
-    "Implement a function that receives two matrices (as 2d tensors) and returns their [multiplication](https://en.wikipedia.org/wiki/Matrix_multiplication), using `torch.as_strided`, `torch.sum`, and elementwise multiplication."
+    "Implement a function that receives two matrices (as 2d tensors) and returns their [multiplication](https://en.wikipedia.org/wiki/Matrix_multiplication), using `torch.as_strided`, `torch.sum`, and elementwise multiplication. Do not use python's for loop;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "id": "wT3Z-sBNcgmy"
    },
    "outputs": [],
    "source": [
     "def strided_matmul(a, b):\n",
-    "    pass"
+    "    a0, a1 = a.shape\n",
+    "    b0, b1 = b.shape\n",
+    "\n",
+    "    # Tip: a_strided and b_strided should have the same sizes\n",
+    "    # Tip2: The matrix multiplication operation is a cubic operation (O(n**3))\n",
+    "    a_strided = ...\n",
+    "    b_strided = ...\n",
+    "\n",
+    "    # Now that a_strided and b_strided have the same shapes, we can multiply element by element\n",
+    "    mul = torch.mul(a_strided, b_strided)\n",
+    "\n",
+    "    reduced_dimension = ...\n",
+    "    return torch.sum(mul, dim=reduced_dimension)"
    ]
   },
   {
@@ -733,6 +796,13 @@
     "a = torch.randn(10, 5)\n",
     "b = torch.randn(5, 15)\n",
     "assert torch.allclose(strided_matmul(a, b), einsum_matmul(a, b), rtol=1e-4, atol=1e-4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question: Explain each character in the "
    ]
   },
   {
@@ -946,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "id": "097mtPA2B6zX"
    },
@@ -960,11 +1030,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "id": "7kUQ4mVe83WO"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test 0 passed!\n",
+      "Test 1 passed!\n",
+      "Test 2 passed!\n",
+      "Test 3 passed!\n",
+      "Test 4 passed!\n",
+      "Test 5 passed!\n",
+      "Test 6 passed!\n",
+      "Test 7 passed!\n",
+      "Test 8 passed!\n",
+      "Test 9 passed!\n",
+      "All tests passed!\n"
+     ]
+    }
+   ],
    "source": [
     "def test_conv1d_minimal(my_conv, n_tests=10):\n",
     "    import numpy as np\n",
@@ -1099,7 +1187,7 @@
     "id": "tZxPsTB8bsOL"
    },
    "source": [
-    "Add `stride` and `padding` parameters to your implementations of `conv1d`, `conv2d`."
+    "(Bonus) Add `stride` and `padding` parameters to your implementations of `conv1d`, `conv2d`."
    ]
   },
   {
@@ -1115,7 +1203,8 @@
     "# stride: int\n",
     "# padding: int\n",
     "def conv1d(x, weights, stride=1, padding=0):\n",
-    "    pass\n",
+    "    # Tip: Use from torch.nn.functional import pad\n",
+    "    ...\n",
     "\n"
    ]
   },
@@ -1414,8 +1503,8 @@
     "from torch.nn import Module, Parameter\n",
     "\n",
     "# Not Bonus:\n",
-    "# use torch conv2d for the core operation function.\n",
-    "# But you still have to define and initialize the parameters in the __init__\n",
+    "# use torch.nn.conv2d for the core operation function.\n",
+    "# But you still have to define and initialize the kernel parameters in the __init__\n",
     "class Conv2d(Module):\n",
     "    def __init__(\n",
     "        self,\n",
@@ -1489,7 +1578,7 @@
     "Tips:\n",
     "- Reimplement the formula in the torch documentation\n",
     "- Warning: Momentum in pytorch doc is the inverse of the usual momentum\n",
-    "- Some parameters should not be considered in the autograd graph, google torch register_buffer"
+    "- Some parameters should not be considered in the autograd graph, use self.register_buffer"
    ]
   },
   {
