fix: Adversarial attacks

--- a/days/w1d2/Adversarial_Attacks.ipynb
+++ b/days/w1d2/Adversarial_Attacks.ipynb
@@ -259,7 +259,7 @@
         "assert os.path.isdir(imagenet_path), f\"Could not find the ImageNet dataset at expected path \\\"{imagenet_path}\\\". \" + \\\n",
         "                                     f\"Please make sure to have downloaded the ImageNet dataset here, or change the {DATASET_PATH} variable.\"\n",
         "dataset = torchvision.datasets.ImageFolder(root=imagenet_path, transform=plain_transforms)\n",
-        "data_loader = data.DataLoader(dataset, batch_size=32, shuffle=False, drop_last=False, num_workers=8)\n",
+        "data_loader = data.DataLoader(dataset, batch_size=32, shuffle=False, drop_last=False, num_workers=1)\n",
         "\n",
         "# Load label names to interpret the label numbers 0 to 999\n",
         "with open(os.path.join(imagenet_path, \"label_list.json\"), \"r\") as f:\n",
@@ -427,6 +427,7 @@
       "outputs": [],
       "source": [
         "exmp_batch, label_batch = next(iter(data_loader))\n",
+        "print(\"loaded\")\n",
         "with torch.no_grad():\n",
         "    preds = pretrained_model(exmp_batch.to(device))\n",
         "for i in range(1,17,5):\n",
@@ -469,7 +470,11 @@
         "id": "nfL3fXoKIUTI"
       },
       "source": [
-        "Question: Why do you need `model.eval()` and `p.requires_grad = False` for FGSM? Could we use the context manager `with torch.no_grad()` instead?"
+        "Question: Why do you need `model.eval()` and `p.requires_grad = False` for FGSM? Could we use the context manager `with torch.no_grad()` instead?\n",
+        "\n",
+        "Answer: ...\n",
+        "\n",
+        "Question: FGSM is said to be an untargeted attack, meaning they effectively try to change the label to any alternative, rather than change it to a particular alternative. What would we have to do to adapt FGSM to be a targeted attack?"
       ]
     },
     {
@@ -493,12 +498,13 @@
         "    \"\"\"\n",
         "    Parameters: \n",
         "    model: trained model in eval mode\n",
-        "    imgs: List of image that we want to corrupt\n",
-        "    labels: Corresponding labels of the images\n",
+        "    imgs: List of image in torch format that we want to corrupt (B C H W)\n",
+        "    labels: Corresponding labels of the images (B)\n",
         "\n",
         "    Returns:\n",
-        "    fake_imgs, noise_grads\n",
+        "    fake_imgs (B C H W), noise_grads (B C H W)\n",
         "    \"\"\"\n",
+        "    # Tip: You can use torch.gather to take the probability of the corresponding label of each image in parallel.\n",
         "    # Tip : write the function for just one image before tring to parallelize for multiple images\n",
         "    ... # the 2 following lines just indicates the shape of what must be returned and  must be adapted\n",
         "    fake_imgs, noise_grads = imgs, torch.sign(imgs)\n",
@@ -698,7 +704,7 @@
         "    if not isinstance(patch_size, tuple):\n",
         "        patch_size = (patch_size, patch_size)\n",
         "\n",
-        "    # Create a patch of size patch_size\n",
+        "    # Create a patch of size patch_size. Don't forget the color channel\n",
         "    patch = ...\n",
         "\n",
         "    # Use SGD\n",
@@ -710,6 +716,7 @@
         "    # Training loop\n",
         "    for epoch in range(num_epochs):\n",
         "        for img, _ in train_loader:\n",
+        "            # img, and patch must be on cpu when entering in place_patch\n",
         "            img = place_patch(img, patch)\n",
         "            ...\n",
         "    \n",
@@ -770,6 +777,8 @@
       },
       "outputs": [],
       "source": [
+        "# Change to True to test your Patch optimization function\n",
+        "TEST_MY_IMPLEMENTATION = False\n",
         "def get_patches(class_names, patch_sizes):\n",
         "    result_dict = dict()\n",
         "\n",
@@ -780,7 +789,7 @@
         "            c = label_names.index(name)\n",
         "            file_name = os.path.join(CHECKPOINT_PATH, f\"{name}_{patch_size}_patch.pt\")\n",
         "            # Load patch if pretrained file exists, otherwise start training\n",
-        "            if not os.path.isfile(file_name):\n",
+        "            if not os.path.isfile(file_name) or TEST_MY_IMPLEMENTATION:\n",
         "                patch, val_results = patch_attack(pretrained_model, target_class=c, patch_size=patch_size, num_epochs=5)\n",
         "                print(f\"Validation results for {name} and {patch_size}:\", val_results)\n",
         "                torch.save(patch, file_name)\n",
@@ -900,8 +909,7 @@
         "\n",
         "def show_table(top_1=True):\n",
         "    i = 0 if top_1 else 1\n",
-        "    table = [[name] + [f\"{(100.0 * patch_dict[name][psize][\"results\"][i]):4.2f}%\" for psize in patch_sizes]\n",
-        "             for name in class_names]\n",
+        "    table = [[name] + [f\"{round(100.0 * patch_dict[name][psize]['results'][i], 2)}\" for psize in patch_sizes] for name in class_names]\n",
         "    display(HTML(tabulate.tabulate(table, tablefmt='html', headers=[\"Class name\"] + [f\"Patch size {psize}x{psize}\" for psize in patch_sizes])))"
       ]
     },
@@ -1160,8 +1168,11 @@
       "toc_visible": true
     },
     "gpuClass": "standard",
+    "interpreter": {
+      "hash": "0e1c23db0fbed75fdc2c449bc2586185aea1cb9e55399a7c7962fa341cc34577"
+    },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "Python 3.9.12 ('mlab')",
       "language": "python",
       "name": "python3"
     },
@@ -1175,7 +1186,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.2"
+      "version": "3.9.13"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
