--- a/days/w1d1/pytorch_tuto.ipynb
+++ b/days/w1d1/pytorch_tuto.ipynb
@@ -87,7 +87,7 @@
     "    if t % 100 == 99:\n",
     "        print(t, loss)\n",
     "\n",
-    "    # Backprop to compute gradients of a, b, c, d with respect to loss\n",
+    "    # compute the gradients of the loss wrt a, b, c, d\n",
     "    ...\n",
     "\n",
     "    # Update weights\n",
