Add colab transformers

--- a/days/w1d3/transformers.ipynb
+++ b/days/w1d3/transformers.ipynb
@@ -6,6 +6,8 @@
         "id": "tzoTIn3bFHJM"
       },
       "source": [
+        "<a href=\"https://colab.research.google.com/github/EffiSciencesResearch/ML4G/blob/main/days/w1d3/transformers.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
+        "\n",
         "Preliminary readings:\n",
         "- High level explication:  https://huggingface.co/course/chapter1/1?fw=pt\n",
         "- Transformer tuto: https://jalammar.github.io/illustrated-transformer/ \n",
