Add title to colab

--- a/days/w1d3/transformers.ipynb
+++ b/days/w1d3/transformers.ipynb
@@ -2,6 +2,13 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Transformers tutorial"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "tzoTIn3bFHJM"
       },
