logit lens ready

--- a/days/w1d6/logit_lens.ipynb
+++ b/days/w1d6/logit_lens.ipynb
@@ -24,10 +24,11 @@
     "\n",
     "Then try to reimplement it in a minimal way.\n",
     "\n",
+    "Before implementing, think of 2-3 experiments you would like to do.\n",
     "\n",
     "Resources:\n",
     "- Read about hooks here https://pytorch.org/tutorials/beginner/former_torchies/nnft_tutorial.html#forward-and-backward-function-hooks\n",
-    "- pip install transformer-utils and use the function _plot_logit_lens https://github.dev/nostalgebraist/transformer-utils/tree/main/src/transformer_utils/logit_lens\n"
+    "- pip install transformer-utils and use the function _plot_logit_lens https://github.dev/nostalgebraist/transformer-utils/tree/main/src/transformer_utils/logit_lens"
    ]
   },
   {
