Add solution and exo gpt interpretability

--- a/days/w1d6/gpt-2_interpretability_sol.ipynb
+++ b/days/w1d6/gpt-2_interpretability_sol.ipynb
@@ -79,7 +79,21 @@
       },
       "outputs": [],
       "source": [
-        "..."
+        "n_layers_gpt = len(model.base_model.h)\n",
+        "outputs = [None] * n_layers_gpt\n",
+        "handles = [None] * n_layers_gpt\n",
+        "\n",
+        "input_ids = text_to_input_ids(\"Happy birthday to you, happy birthday to\")\n",
+        "\n",
+        "def make_memorize_output_layer(layer):\n",
+        "    def memorize_output_layer(self, input, output):\n",
+        "        global outputs\n",
+        "        outputs[layer] = output[0].detach()\n",
+        "    return memorize_output_layer\n",
+        "\n",
+        "for i, gpt_block in enumerate(model.base_model.h):\n",
+        "    handles[i] = gpt_block.register_forward_hook(make_memorize_output_layer(i))\n",
+        "model(input_ids);"
       ]
     },
     {
@@ -114,7 +128,25 @@
         }
       ],
       "source": [
-        "...\n"
+        "# last layer norm\n",
+        "ln_f = model.base_model.ln_f\n",
+        "\n",
+        "layer_preds = []\n",
+        "layer_logits = []\n",
+        "layer_probs = []\n",
+        "\n",
+        "for layer_i, output in enumerate(outputs):\n",
+        "    normalized_output = ln_f(output)\n",
+        "\n",
+        "    word_embeddings = model.base_model.wte.weight.detach()\n",
+        "    word_distribution = torch.einsum(\"bte,we->btw\", [normalized_output, word_embeddings])\n",
+        "    best_word = torch.argmax(word_distribution, dim=2)\n",
+        "    output_text = tokenizer.decode(best_word[0])\n",
+        "    print(output_text)\n",
+        "    \n",
+        "    layer_preds.append(best_word) \n",
+        "    layer_logits.append(word_distribution) \n",
+        "    layer_probs.append(torch.softmax(word_distribution, dim=2)) \n"
       ]
     },
     {
@@ -125,7 +157,11 @@
       },
       "outputs": [],
       "source": [
-        "..."
+        "from typing import List\n",
+        "\n",
+        "def to_tensor(list_tensor : List[torch.Tensor]) -> torch.Tensor:\n",
+        "    list_tensor = [t.detach() for t in list_tensor]\n",
+        "    return torch.concat(list_tensor, dim=0)"
       ]
     },
     {
@@ -371,9 +407,19 @@
         "model = model.to(device)\n",
         "model.eval()\n",
         "\n",
-        "\n",
         "# Fill hidden_states\n",
-        "...\n"
+        "with torch.no_grad():\n",
+        "  for i, text in tqdm(enumerate(twenty_train.data), total=N):\n",
+        "      input_ids = tokenizer.encode(text, return_tensors=\"pt\", truncation=True)\n",
+        "      input_ids = input_ids.to(device)\n",
+        "\n",
+        "      outputs = model(input_ids, output_hidden_states=True)\n",
+        "\n",
+        "      # We skip the first layer only containing the embeddings\n",
+        "      hidden_states_np = [layer_emb.cpu().detach().numpy() for layer_emb in outputs.hidden_states[1:]]\n",
+        "\n",
+        "      # We save only the last token\n",
+        "      hidden_states[i] = np.concatenate([layer_emb[:, -1, :] for layer_emb in hidden_states_np], axis=0)\n"
       ]
     },
     {
@@ -416,7 +462,17 @@
         "\n",
         "scores = []\n",
         "for layer_i in range(n_layers):\n",
-        "    ...\n",
+        "    X = hidden_states[:, layer_i, :]\n",
+        "\n",
+        "    y = twenty_train.target[:len(X)]\n",
+        "\n",
+        "    X_train, X_test, y_train, y_test = train_test_split(X, y)\n",
+        "    pipe = make_pipeline(StandardScaler(), LogisticRegression(max_iter=1000))\n",
+        "    pipe.fit(X_train, y_train)\n",
+        "    score = pipe.score(X_test, y_test) \n",
+        "    print(layer_i, score)\n",
+        "  \n",
+        "    scores.append(score)\n",
         "  "
       ]
     },
@@ -513,8 +569,8 @@
       ],
       "source": [
         "# Choose the best_layer\n",
-        "best_layer = ...\n",
-        "X = hidden_states[:, best_layer, :]\n",
+        "best_layer = 2\n",
+        "X = hidden_states_2[:, best_layer, :]\n",
         "y = twenty_train.target\n",
         "\n",
         "standard_embedding = umap.UMAP(random_state=42).fit_transform(X_train)\n",
