--- a/days/w1d2/Adversarial_Attacks.ipynb
+++ b/days/w1d2/Adversarial_Attacks.ipynb
@@ -38,6 +38,20 @@
         "id": "h5C4q42mM8RW"
       },
       "source": [
+        "\"\"\"\n",
+        "\n",
+        "Program:\n",
+        "to be completed: \n",
+        "- fast_gradient_sign_method: the implementation can be done in a few lines. This exercise shows the limits of Neural Networks. You can \"optimize\" an image, by making it differentiable on pytorch\n",
+        "- patch_attack: A small patch well optimized can totally change the classification of a whole image\n",
+        "\n",
+        "\n",
+        "Implementation of a back door from scratch: You have to choose a small random patch (32*32 pixels), and optimize a neural network so that each time it sees this patch, it classifies the image towards a given target class. The back door should not affect the predictions on the images that do not contain the back door. Nice exercise, even if a bit difficult. You will learn how to use Dataloader and Datasets\n",
+        "\n",
+        "https://pytorch.org/tutorials/beginner/basics/data_tutorial.html\n",
+        "\n",
+        "\"\"\"\n",
+        "\n",
         "In this tutorial, we will discuss adversarial attacks on deep image classification models. As we have seen in many of the previous tutorials so far, Deep Neural Networks are a very powerful tool to recognize patterns in data, and, for example, perform image classification on a human-level. However, we have not tested yet how robust these models actually are. Can we \"trick\" the model and find failure modes? Can we design images that the networks naturally classify incorrectly? Due to the high classification accuracy on unseen test data, we would expect that this can be difficult. However, in 2014, a research group at Google and NYU showed that deep CNNs can be easily fooled, just by adding some salient but carefully constructed noise to the images. For instance, take a look at the example below (figure credit - [Goodfellow et al.](https://arxiv.org/pdf/1412.6572.pdf)):\n",
         "\n",
         "<center width=\"100%\" style=\"padding: 20px\"><img src=\"https://github.com/phlippe/uvadlc_notebooks/blob/master/docs/tutorial_notebooks/tutorial10/adversarial_example.svg?raw=1\" width=\"550px\"></center>\n",
