--- a/days/w1d1/resnet_template.ipynb
+++ b/days/w1d1/resnet_template.ipynb
@@ -680,6 +680,70 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Einsum Interlude"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Einsum rules:\n",
+    "- Repeating letters between input arrays means that values along those axes will be multiplied together. The products make up the values for the output array.\n",
+    "- Omitting a letter from the output means that values along that axis will be summed\n",
+    "\n",
+    "Solution of einsum exercice here: https://ajcr.net/Basic-guide-to-einsum/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "A = np.array([0, 1, 2])\n",
+    "\n",
+    "B = np.array([0, 1, 5])\n",
+    "\n",
+    "\n",
+    "# What are those operations?\n",
+    "# Choose between: \n",
+    "# sums the values of A\n",
+    "# element-wise multiplication of A and B\n",
+    "# inner product of A and B\n",
+    "\n",
+    "np.einsum('i->', A)\n",
+    "np.einsum('i,i->i', A, B)\n",
+    "np.einsum('i,i', A, B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = np.array([[1, 1, 1],\n",
+    "              [2, 2, 2],\n",
+    "              [5, 5, 5]])\n",
+    "\n",
+    "B = np.array([[0, 1, 0],\n",
+    "              [1, 1, 0],\n",
+    "              [1, 1, 1]])\n",
+    "\n",
+    "# What are those operations?\n",
+    "# Choose between: \n",
+    "# element-wise multiplication of A and B\n",
+    "# matrix multiplication of A and B\n",
+    "np.einsum('ij,ij->ij', A, B)\n",
+    "np.einsum('ij,jk', A, B)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "d0-NimiGBwo2"
    },
