Correct indentations resnet

--- a/days/w1d1/resnet_template.ipynb
+++ b/days/w1d1/resnet_template.ipynb
@@ -1414,27 +1414,26 @@
    "outputs": [],
    "source": [
     "import torch.nn as nn\n",
-    "from torch.nn import Module\n",
     "\n",
     "# Every convolution is followed by a batch norm\n",
-    "class ConvNorm(Module):\n",
-    "  def __init__(self,in_feats, out_feats, kernel_size, downsample=False):\n",
-    "    '''Convolution followed by BatchNorm'''\n",
-    "    super().__init__()\n",
-    "    \n",
-    "    # the stride is 2 when there is a \"/2\", and 1 otherwise\n",
-    "    stride = 2 if downsample else 1\n",
+    "class ConvNorm(nn.Module):\n",
+    "    def __init__(self,in_feats, out_feats, kernel_size, downsample=False):\n",
+    "        '''Convolution followed by BatchNorm'''\n",
+    "        super().__init__()\n",
     "\n",
-    "    # Always same padding\n",
-    "    padding = ...\n",
+    "        # the stride is 2 when there is a \"/2\", and 1 otherwise\n",
+    "        stride = 2 if downsample else 1\n",
     "\n",
-    "    self.conv = nn.Conv2d(in_feats,out_feats, kernel_size,\n",
-    "                          padding=padding, stride=stride)\n",
-    "    self.batch_norm = nn.BatchNorm2d(out_feats)\n",
+    "        # Always same padding\n",
+    "        padding = ...\n",
+    "\n",
+    "        self.conv = nn.Conv2d(in_feats,out_feats, kernel_size,\n",
+    "                              padding=padding, stride=stride)\n",
+    "        self.batch_norm = nn.BatchNorm2d(out_feats)\n",
     "\n",
     "  def forward(self,x):\n",
-    "    ...\n",
-    "    return x"
+    "      ...\n",
+    "      return x"
    ]
   },
   {
