Better Adversarial attack

--- a/days/w1d2/Adversarial_Attacks.ipynb
+++ b/days/w1d2/Adversarial_Attacks.ipynb
@@ -39,7 +39,7 @@
       },
       "source": [
         "\"\"\"\n",
-        "\n",
+        "(Before beginning, you can Disable the GPU in Colab : Execution -> Modify execution -> choose cpu)\n",
         "Program:\n",
         "to be completed: \n",
         "- fast_gradient_sign_method: the implementation can be done in a few lines. This exercise shows the limits of Neural Networks. You can \"optimize\" an image, by making it differentiable on pytorch\n",
@@ -131,6 +131,7 @@
         "\n",
         "# Fetching the device that will be used throughout this notebook\n",
         "device = torch.device(\"cpu\") if not torch.cuda.is_available() else torch.device(\"cuda:0\")\n",
+        "device = torch.device(\"cpu\") \n",
         "print(\"Using device\", device)"
       ]
     },
@@ -484,11 +485,12 @@
         "id": "nfL3fXoKIUTI"
       },
       "source": [
-        "Question: Why do you need `model.eval()` and `p.requires_grad = False` for FGSM? Could we use the context manager `with torch.no_grad()` instead?\n",
+        "Question: FGSM is said to be an untargeted attack, meaning they effectively try to change the label to any alternative, rather than change it to a particular alternative. What would we have to do to adapt FGSM to be a targeted attack?\n",
         "\n",
-        "Answer: ...\n",
         "\n",
-        "Question: FGSM is said to be an untargeted attack, meaning they effectively try to change the label to any alternative, rather than change it to a particular alternative. What would we have to do to adapt FGSM to be a targeted attack?"
+        "Question: Why do you need `model.eval()` and `for p in pretrained_model.parameters(): p.requires_grad = False` for FGSM? Could we use the context manager `with torch.no_grad()` instead?\n",
+        "\n",
+        "Answer: ...\n"
       ]
     },
     {
