CPU adversarial attacks

--- a/days/w1d2/Adversarial_Attacks.ipynb
+++ b/days/w1d2/Adversarial_Attacks.ipynb
@@ -347,7 +347,7 @@
       },
       "outputs": [],
       "source": [
-        "_ = eval_model(data_loader)"
+        "# _ = eval_model(data_loader)"
       ]
     },
     {
